# secret_sharing

./: README.md
Eliptic_curve_secret_sharing/: CMakeLists.txt  Readme.md
Eliptic_curve_secret_sharing/include/: ecc.h  openssl_ec.h  poly.h  recov.h
Eliptic_curve_secret_sharing/src/: ecc.c  main.c  poly.c  recov.c
naive_secret_sharing/: CMakeLists.txt
naive_secret_sharing/include/: function1.h  function2.h
naive_secret_sharing/src/: function1.c  function2.c  main.c
naive_secret_sharing/test/: CMakeLists.txt  test.c
